==> liu-delong/lu_xing_xiang_one_os/drivers/hal/mm32/drivers/drv_gpio.c <==
#include <os_irq.h>
#include "drv_gpio.h"
#include <mm32_hal.h>
#define MM32_PIN(index, rcc, gpio, gpio_index) { 0, RCC_##rcc##Periph_GPIO##gpio, GPIO##gpio, GPIO_Pin_##gpio_index, GPIO_PortSourceGPIO##gpio, GPIO_PinSource##gpio_index}
#define MM32_PIN_RESERVED {-1, 0, 0, 0, 0, 0}
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

int os_hw_pin_init(void)
{
    /*enable clock*/
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA | RCC_APB2Periph_GPIOB, ENABLE); 

    RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO, ENABLE);
    /*disable jtag only swd mode can be used*/
    GPIO_PinRemapConfig(GPIO_Remap_SWJ_JTAGDisable, ENABLE);		

    return os_device_pin_register(0, &_MM32_pin_ops, OS_NULL);
}
