==> liu-delong/lu_xing_xiang_one_os/drivers/hal/gd/drivers/drv_gpio.c <==
#include <os_irq.h>
#include "drv_gpio.h"
#include "gd32f30x.h"
#include "gd32f30x_exti.h"
#include <os_irq.h>
#define __GD32_PIN(index, port, pin) {index, RCU_GPIO##port, GPIO##port, \
        GPIO_PIN_##pin, GPIO_PORT_SOURCE_GPIO##port, GPIO_PIN_SOURCE_##pin}
#define __GD32_PIN_DEFAULT {-1, (rcu_periph_enum)0, 0, 0, 0, 0}
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

int os_hw_pin_init(void)
{
#if defined(RCU_GPIOA)
   rcu_periph_clock_enable(RCU_GPIOA);
#endif

#if defined(RCU_GPIOB)
   rcu_periph_clock_enable(RCU_GPIOB);
#endif

#if defined(RCU_GPIOC)
   rcu_periph_clock_enable(RCU_GPIOC);
#endif

   return os_device_pin_register(0, &_gd32_pin_ops, OS_NULL);
}
